--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,13 @@ install:
 script:
   - bash ./scripts/execute.sh
   - npm test
+after_script:
+  - git add .
+  - git commit -m "update package"
+  - git push --force --quiet "https://${GIT_TOKEN}@github.com/clanaid/libphonenumber-js-utils.git"
 before_deploy: echo "$(tput bold)$(tput setaf 6)Starting NPM release for version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
-deploy:
-  provider: npm
-  email: $NPM_EMAIL
-  api_key: $NPM_TOKEN
-  skip_cleanup: true
-  on:
-    tags: true
+
 after_deploy: echo "$(tput bold)$(tput setaf 6)Completed Deployment of NPM version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
+branches:
+  only:
+    - dev
