--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,14 @@ script:
   - bash ./scripts/execute.sh
   - npm test
 after_script:
+  - mkdir public
+  - rm -rf node_modules
+  - cp * ./public
+  - cd ./public
+  - git init
   - git add .
   - git commit -m "update package"
-  - git push --force
+  - git push --force --quiet "https://${GIT_TOKEN}@github.com/clanaid/libphonenumber-js-utils.git" master:master
 before_deploy: echo "$(tput bold)$(tput setaf 6)Starting NPM release for version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
 
 after_deploy: echo "$(tput bold)$(tput setaf 6)Completed Deployment of NPM version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
