--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,6 @@ after_script:
 before_deploy: echo "$(tput bold)$(tput setaf 6)Starting NPM release for version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
 
 after_deploy: echo "$(tput bold)$(tput setaf 6)Completed Deployment of NPM version - `cat package.json | python -c "import sys, json; print(json.load(sys.stdin)['version'])"`"
+branches:
+  only:
+    - dev
