--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "filterxml": "^1.1.4",
+    "node-minify": "^3.6.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "jsdom": "^13.1.0",
